syntax = "proto3";

package api.accounts;
import "google/api/annotations.proto";
import "errors/errors.proto";

option go_package = "accountsapi/api/accounts;accounts";
option java_multiple_files = true;
option java_package = "api.accounts";

service Accounts {
	rpc CreateAccounts (CreateAccountsRequest) returns (CreateAccountsReply) {
		option (google.api.http) = {
			post: "/account",
			body: "*"
		};
	};
	
	rpc UpdateAccounts (UpdateAccountsRequest) returns (UpdateAccountsReply){
		option (google.api.http) = {
			post: "/account/update",
			body: "*"
		  };
	};
	rpc DeleteAccounts (DeleteAccountsRequest) returns (DeleteAccountsReply){
		option (google.api.http) = {
			delete: "/account/{id}{",
		  };
	};
	rpc GetAccount (GetAccountRequest) returns (GetAccountReply){
		option (google.api.http) = {
			get: "/account/{id}",
		};
	};
	rpc ListAccounts (ListAccountsRequest) returns (ListAccountsReply){
		option (google.api.http) = {
			get: "/account",
		};
	};

	rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionReply) {
		option (google.api.http) = {
			post: "/transaction",
			body: "*"
		};
	};

	rpc UpdateTransaction (UpdateTransactionRequest) returns (UpdateTransactionRequest) {
		option (google.api.http) = {
			post: "/transaction/{id}",
			body: "*"
		};
	};

	rpc DeleteTransaction (DeleteTransactionRequest) returns (DeleteAccountsReply) {
		option (google.api.http) = {
			delete: "/transaction/{id}",
		};
	};

	rpc GetTransaction (DeleteAccountsRequest) returns (UpdateAccountsReply){
		option (google.api.http) = {
			get: "/account/{id}",
		};
	};

	rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsReply){
		option (google.api.http) = {
			get: "/transaction",
		};
	};
}

message CreateAccountsRequest {
	string name = 1;
}
message CreateAccountsReply {
	string id = 1;
}

message UpdateAccountsRequest {
	string id = 1;
	string name = 2;
}
message UpdateAccountsReply {
	string id = 1;
}

message DeleteAccountsRequest {
	string id = 1;
}
message DeleteAccountsReply {}

message GetAccountRequest {
	string id = 1;
}
message GetAccountReply {
	string id = 1;
	string name = 2;
}

message ListAccountsRequest {}
message ListAccountsReply {
	repeated GetAccountReply accounts =1;
};

message CreateTransactionRequest {
	string account_source = 1;
	string account_dest = 2;
	int32 amount = 3;
	int64 time = 4;
}

message CreateTransactionReply  {
	string id = 1;
}

message UpdateTransactionRequest {
	string id = 1;
	string account_source = 2;
	string account_dest = 3;
	int32 amount = 4;
	int64 time = 5;
}

message DeleteTransactionRequest {
	string id = 1;
}

message ListTransactionsRequest {
	string account_id = 1;
}

message ListTransactionsReply {
	repeated UpdateAccountsReply transactions = 1;
}

enum ErrorReason {
	// Set default error code.
	option (errors.default_code) = 500;
  
	// Set the error code separately for an enumeration.
	ACCOUNT_EXISTS = 0 [(errors.code) = 400];
  
	ACCOUNT_NOT_EXIST = 1 [(errors.code) = 404];
  }